2005-11-15  Paul Eggert  <eggert@cs.ucla.edu>

	* xstrtod.c: Don't bother with #pragma STDC FENV_ACCESS ON, as
	coreutils no longer futzes with rounding modes.

2005-11-08  Eric Blake  <ebb9@byu.net>

	* getaddrinfo.h: Use #if !, not #ifndef, for AC_CHECK_DECLS.

2005-11-13  Jim Meyering  <jim@meyering.net>

	* mkstemp-safer.c: Include <config.h>, required for possible
	replacement of mkstemp.


2005-11-12  Jim Meyering  <jim@meyering.net>

	Emulate openat-family functions using Linux's procfs, if possible.
	Idea and some code based on Ulrich Drepper's glibc changes.

	* openat.c: (BUILD_PROC_NAME): New macro.
	Include <stdio.h>, <string.h>, "alloca.h" and "intprops.h".
	(rpl_openat): Emulate by trying to open /proc/self/fd/%d/%s,
	before falling back on save_cwd and restore_cwd.
	(fdopendir, fstatat, unlinkat): Likewise.

2005-11-11  Jim Meyering  <jim@meyering.net>

	* openat.c (fstatat, unlinkat): Perform the syscall directly,
	skipping the save_cwd...restore_cwd overhead, if FILE is absolute.

2005-11-10  Paul Eggert  <eggert@cs.ucla.edu>

	* gethrxtime.c: Include "timespec.h" rather than the sys/time / time
	business.
	(gethrxtime) [! (HAVE_NANOUPTIME
	|| (defined CLOCK_MONOTONIC && HAVE_CLOCK_GETTIME)
	|| HAVE_MICROUPTIME)]: Fall back on gettime rather than rolling
	our own approximation.

2005-11-01  Paul Eggert  <eggert@cs.ucla.edu>

	* posixtm.h (PDS_PRE_2000): New macro.
	* posixtm.c (year): Arg is now syntax_bits rather than allow_century.
	All usages changed.  Reject dates outside the range 1969-1999 if
	PDS_PRE_2000 is used.

2005-10-30  Paul Eggert  <eggert@cs.ucla.edu>

	Fix porting problems reported by Theodoros V. Kalamatianos.
	* fd-reopen.c [defined HAVE_CONFIG_H]: Include <config.h>,
	so that large files can be opened.
	* utimens.c (futimens) [HAVE_WORKING_UTIMES && HAVE_FUTIMES]:
	Don't assume that futimes failing means we must fail.

2005-10-29  Paul Eggert  <eggert@cs.ucla.edu>
